--- a/sadans-frontend/src/components/Header/Header.css
+++ b/sadans-frontend/src/components/Header/Header.css
@@ -7,7 +7,9 @@
     /* Green background */
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-family: sans-serif;
+    font-family: 'Poppins',sans-serif;
+    font-size: larger;
+    font-weight: 600;
 }
 
 .header-logo h1 {
