Added side pane and content pane

--- a/sadans-frontend/src/components/Dropdown/Dropdown.css
+++ b/sadans-frontend/src/components/Dropdown/Dropdown.css
@@ -2,6 +2,7 @@
 .dropdown-container {
     position: relative;
     display: inline-block;
+    border-radius: 30px;
   }
   
   /* Hide the dropdown menu by default */
