--- a/sadans-frontend/src/components/Header/Header.css
+++ b/sadans-frontend/src/components/Header/Header.css
@@ -1,15 +1,21 @@
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Set your header height here */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 30px;
-    background-color: #4CAF50;
-    /* Green background */
-    color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #2F3C7E;
+    color: #FBEAEB;
     font-family: 'Poppins', sans-serif;
-    font-size: larger;
+    font-size: 14px;
     font-weight: 600;
+    transition: box-shadow 0.3s ease;
+    z-index: 1000;
+   
 }
 
 .header-logo h1 {
@@ -36,8 +42,8 @@
 
 .navbar-item a {
     text-decoration: none;
-    color: white;
-    font-size: 16px;
+    color: #FBEAEB;
+    font-size: 14px;
     transition: color 0.3s;
 }
 
@@ -46,18 +52,32 @@
     /* Gold color on hover */
 }
 
-.dropdown-item select {
-    font-family: sans-serif;
-    padding: 5px;
-    font-size: 16px;
-    background-color: #4CAF50;
-    border: #4CAF50;
+
+.dropdown-item li {
+    padding: 10px;
+    font-size: 15px;
+    background-color: #FBEAEB;
+    border: #b7ffba;
     color: white;
 }
 
 .navbar-item.dropdown-item {
     position: relative;
     padding-right: 20px;
+    
+}
+
+
+.navbar-item.dropdown-item .dropdown::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: 10px;
+    background-color: transparent;
+    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 998;
 }
 
 .navbar-item.dropdown-item::after {
