--- a/sadans-frontend/src/components/Hero/Hero.css
+++ b/sadans-frontend/src/components/Hero/Hero.css
@@ -23,7 +23,7 @@
     margin: 10px 0;
     padding: 10px;
     background-color: #2F3C7E;
-    color: white;
+    color: #edefff;
     text-align: center;
     cursor: pointer;
     border-radius: 5px;
