--- a/sadans-frontend/src/components/NewTransaction/NewTransaction.css
+++ b/sadans-frontend/src/components/NewTransaction/NewTransaction.css
@@ -99,3 +99,10 @@
     background-color: #0056b3;
     /* Darker blue on hover */
 }
+
+.transaction-status {
+    color: rgb(23, 175, 23);
+    font-family: Arial,sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
