--- a/sadans-frontend/src/components/GetTransactionDetails/GetTransactionDetails.css
+++ b/sadans-frontend/src/components/GetTransactionDetails/GetTransactionDetails.css
@@ -18,7 +18,7 @@
     /* Bold label */
 }
 
-.get-transaction-details select {
+.get-transaction-details .search-client input {
     width: 100%;
     /* Full width */
     padding: 10px;
@@ -128,4 +128,11 @@
 .get-transaction-details table td {
     font-size: 14px;
     /* Increase font size for cells */
+}
+
+.filtered-clients-list{
+    list-style-type: none;
+    font-size: large;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
